--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
 idf_component_register(SRCS "main.c" "lvgl_graphics.c" "hw_init.c"
                        INCLUDE_DIRS ".")
+set(EXTRA_COMPONENT_DIRS "C:/Users/grega/esp/v5.4/esp-adf/components")
