--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "lvgl_graphics.c" "hw_init.c"
+idf_component_register(SRCS "common.c" "main.c" "lvgl_graphics.c" "hw_init.c"
                        INCLUDE_DIRS ".")
